apps/base/homeassistant/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: homeassistant
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: homeassistant
  ports:
    - name: http
      port: 8123
      targetPort: http
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: homeassistant
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: homeassistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:stable
          imagePullPolicy: Always
          volumeMounts:
            - name: hass-storage
              mountPath: /config
            - name: secrets
              mountPath: /secrets
              readOnly: true
          ports:
            - name: http
              containerPort: 8123
              hostPort: 8123
          resources:
            requests:
              cpu: 50m
              memory: 350Mi
            limits:
              cpu: 350m
              memory: 1Gi
          securityContext:
            privileged: true
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/bash
                  - -c
                  - cp /secrets/secrets.yaml /config/secrets.yaml
      volumes:
        - name: hass-storage
          persistentVolumeClaim:
            claimName: homeassistant-pvc
        - name: secrets
          secret:
            secretName: homeassistant
            items:
              - key: secrets.yaml
                path: secrets.yaml
