apps/base/homeassistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-dashboard-https
  namespace: homeassistant
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: homeassistant-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ha.saldivar.io`)
      kind: Rule
      services:
        - name: homeassistant
          port: http
      middlewares:
        - name: security
          namespace: kube-system
